--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@tsparticles/vue3": "^3.0.1",
     "nanoid": "^5.0.9",
     "pinia": "^2.2.6",
     "vue": "^3.5.13",
