--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "@tsparticles/vue3": "^3.0.1",
     "nanoid": "^5.0.9",
     "pinia": "^2.2.6",
     "vue": "^3.5.13",
+    "vue-confetti-explosion": "^1.0.2",
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
