--- a/package.json
+++ b/package.json
@@ -19,13 +19,15 @@
     "pinia": "^2.2.6",
     "vue": "^3.5.13",
     "vue-confetti-explosion": "^1.0.2",
-    "vue-router": "^4.4.5"
+    "vue-router": "^4.4.5",
+    "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.49.0",
     "@tsconfig/node22": "^22.0.0",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^22.9.3",
+    "@types/sortablejs": "^1.15.8",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vitejs/plugin-vue-jsx": "^4.1.1",
     "@vitest/eslint-plugin": "1.1.10",
